changed size of charity buttons on mobile, also fixed bug during game loop of glitchy background color

--- a/styles/splash.css
+++ b/styles/splash.css
@@ -72,6 +72,7 @@ p {
  }
 
  .btn-primary {
+   font-size: 1em;
    margin: 3px;
  }
 }
