--- a/styles/splash2.css
+++ b/styles/splash2.css
@@ -71,6 +71,7 @@ span {
  }
 
  .btn-primary {
+   font-size: 1em;
    margin: 3px;
  }
 }
